fix: fix gallery infinity scroll on mobile

--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -463,3 +463,11 @@ body {
     max-width: 500px;
   }
 }
+.modal#gallery-tab {
+  .modal-content-scrollable {
+    overflow-y: hidden;
+    .gallery {
+      max-height: inherit;
+    }
+  }
+}
