--- a/src/client/ts/components/Tabs/Customization/customization.scss
+++ b/src/client/ts/components/Tabs/Customization/customization.scss
@@ -11,8 +11,10 @@
     justify-content: center;
     height: 100%;
     min-height: inherit;
-    background-color: #E7E8EA;
 
+    @include lg {
+      background-color: #E7E8EA;
+    }
 
     .wrapper-sad-svg {
       display: block;
